@@ -44,9 +44,7 @@ for dir in bin lib lib/fink lib/perl5 lib/perl5/Fink \
 	   share share/doc share/doc/fink share/man \
 	   share/man/man8 share/man/man5 \
 		share/fink share/fink/images \
-		var var/lib var/run var/lib/fink var/run/fink \
-		var/lib/fink/path-prefix-g++-3.3 \
-                var/lib/fink/path-prefix-g++-4.0; do
+		var var/lib var/run var/lib/fink var/run/fink; do
   mkdir "$basepath/$dir"
   chmod 755 "$basepath/$dir"
 done
@@ -62,10 +60,6 @@ install -c -p -m 755 pathsetup.sh "$basepath/bin/"
 install -c -p -m 644 fink.8 "$basepath/share/man/man8/"
 install -c -p -m 644 fink.conf.5 "$basepath/share/man/man5/"
 install -c -p -m 644 images/*.png "$basepath/share/fink/images/"
-install -c -p -m 755 path-prefix-g++-3.3/g++ "$basepath/var/lib/fink/path-prefix-g++-3.3"
-ln -sfn "g++" "$basepath/var/lib/fink/path-prefix-g++-3.3/c++"
-install -c -p -m 755 path-prefix-g++-4.0/g++ "$basepath/var/lib/fink/path-prefix-g++-4.0"
-ln -sfn "g++" "$basepath/var/lib/fink/path-prefix-g++-4.0/c++"
 
 # copy all perl modules
 for subdir in . Text Notify ; do
