@@ -1,2 +1,0 @@
-#!/bin/sh
-exec g++-3.3 "$@"
